fix(web): code wrap

--- a/web/src/styles/global.css
+++ b/web/src/styles/global.css
@@ -1,2 +1,3 @@
-.cm-gutters {
+.wmde-markdown pre > code {
+  text-wrap: wrap !important;
 }
